switched to Java 8 for greater reach. updated README with installation instructions